# chatfs-server

./: README.md  build.sh  pyproject.toml
src/: main.py  notice-copy.html  notice.html  queries.py  types.py
src/api/: client.py  home.py  llm.py
src/api/llm_ops/: content.py  list.py  manipulations.py  write.py
src/clientmanager/: __init__.py  client.py  clientmanager.py  manager.py
src/socket/: __init__.py  client.py  client_manager.py
